       
     * colClasses has been added. Same character vector format as read.csv (may be named or unnamed), but
       additionally may be type list. Type list enables setting ranges of columns by numeric position.
       NB: colClasses is intended for rare overrides, not needed for routine use.
       
BUG FIXES

  o  Fixed format errors of timings produced by fread(...,verbose=TRUE). Caused by recent
     changes from (double)currentTime() to (clock_t)clock() at C level to pass R-devel
     checks. Tests don't check the verbose output of fread() so it slipped through.
	 
  o  rbind, cbind and merge on data.table should now work in packages that Import but do not
     Depend on data.table. Many thanks to a patch to .onLoad from Ken Williams, and related
     posts from Victor Kryukov :
	     http://r.789695.n4.nabble.com/Import-problem-with-data-table-in-packages-tp4665958.html

USER VISIBLE CHANGES

    o   := on a null data.table now gives a clearer error message :
          "Cannot use := to add columns to a null data.table (no columns), currently. You can use := 
           to add (empty) columns to an empty data.table (1 or more columns, all 0 length), though."
        rather than the untrue :
          "Cannot use := to add columns to an empty data.table, currently"

    o   Misuse of := and `:=`() is now caught in more circumstances and gives a clearer and shorter error message :
          ":= and `:=`(...) are defined for use in j, once only and in particular ways. See
           help(":="). Check is.data.table(DT) is TRUE."

    o   data.table(NULL) now prints "Null data.table (0 rows and 0 cols)" and FAQ 2.5 has been
        improved. Thanks to:
          http://stackoverflow.com/questions/15317536/is-null-does-not-work-on-null-data-table-in-r-possible-bug
		  
    o   The braces {} have been removed from rollends's default, to solve a trace() problem. Thanks
	    to Josh O'Brien's investigation :